# manact_ws

./: .cnb.yml  .gitignore  CODEBUDDY.md  README.en.md  README.md  SDK_python.md  _test_nodes.py  requirements.txt  skills-lock.json
.claude/: settings.local.json
.cnb/: FUNDING.yml  settings.yml  vscode.yml
.codewhale/: instructions.md
src/: D455.md  arm_multi_pose_demo.py
src/base/ctrl_keyboard/: audio_control_test.py  package.xml  setup.cfg  setup.py  text.txt  whole_test.py
src/base/ctrl_keyboard/ctrl_keyboard/: auto_ctrl.py
src/base/ctrl_keyboard/install/: local_setup.sh  setup.sh
src/base/ctrl_keyboard/install/ctrl_keyboard/lib/ctrl_keyboard/: auto_walk  ctrl_keyboard
src/base/ctrl_keyboard/install/ctrl_keyboard/share/ctrl_keyboard/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
src/base/g1_driver_py/: package.xml  setup.cfg  setup.py
src/base/g1_driver_py/g1_driver_py/: driver.py
src/base/g1_driver_py/launch/: driver.launch.py
src/base/g1_driver_py/params/: driver.yaml
src/base/g1_driver_py/rviz/: display.rviz
src/base/g1_teleop_ctrl_keyboard/: package.xml  setup.cfg  setup.py
src/base/g1_twist_bridge_py/: package.xml  setup.cfg  setup.py
src/base/g1_twist_bridge_py/g1_twist_bridge_py/: sport_model.py  twist_bridge.py
src/base/go2_driver_py/: package.xml  setup.py
src/base/go2_driver_py/go2_driver_py/: driver.py
src/base/go2_teleop_ctrl_keyboard/: package.xml  setup.py
src/base/go2_twist_bridge_py/: package.xml  setup.py
src/g1_yolo_nav_py/: package.xml  setup.cfg  setup.py
src/g1_yolo_nav_py/arm/: arm.py  arm_common.py  arm_debug.py  arm_multi_pose_demo.py  armdown.py  armup.py
src/g1_yolo_nav_py/config/: arm_poses.json  yolo_nav.yaml
src/g1_yolo_nav_py/g1_yolo_nav_py/: __init__.py  _dds_compat.py  _detection_utils.py  _forward_approach.py  _grasp_state.py  _step_aligner.py  _vis_utils.py  control_panel.py  detection_visualizer.py  distence.py  grasp_task.py  loco_forward.py  nav_planner.py  rgbd_capture.py  spatial_target.py  sport_client.py  waist_align.py  waist_tracker.py  web_panel.py  yaw_align.py  yolo_detector.py
src/g1_yolo_nav_py/launch/: grasp_task.launch.py  yolo_nav.launch.py
src/web_frontend/: dev_server.py  index.html
src/web_frontend/css/: lggc.css  style.css
src/web_frontend/js/: app.js
(+7 files in other folders)
