<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ctrl_keyboard</name>
  <version>0.0.0</version>
  <description>Unitree G1 机器人键盘控制功能包</description>
  <maintainer email="developer@example.com">developer</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>unitree_api</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
