<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>g1_driver_py</name>
  <version>0.1.0</version>
  <description>宇树 G1 人形机器人驱动包 — 里程计、TF、关节状态发布</description>
  <maintainer email="xhunli@qq.com">HunLi</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>unitree_go</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>

  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
